# polyglot-monorepo

./: .editorconfig  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  go.mod  package.json
helloworld/helloworld-gateway/grpc-gateway/: BUILD.bazel  main.go
helloworld/helloworld-service/serviceA/: BUILD.bazel  index.ts  package.json  tsconfig.json
helloworld/helloworld-service/serviceB/: BUILD.bazel  main.go
protobuf/helloworld/api/v1/: BUILD.bazel  api.pb.go  api.proto
protobuf/helloworld/rpc/: BUILD.bazel  rpc.pb.go  rpc.proto
