load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "serviceB_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaeheonji/polyglot-monorepo/helloworld/helloworld-service/serviceB",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "serviceB",
    embed = [":serviceB_lib"],
    visibility = ["//visibility:public"],
)
